# whats-app-llm-integration

./: .gitignore  Makefile  README.md  bfs.py  claude.md  config.py  main.py  pyproject.toml  requirements.txt  todo.md
database/: firebase.py  models.py
e2e/: test_openai_client.py
integrations/: openai_client.py
learnings/: async-io-and-whatsapp-backend-best-practices.md
prompt/en/: EN_prompt_A_control_condition.txt  EN_prompt_B_motivational_learning.txt  EN_prompt_C_perspective.txt  EN_prompt_D_christmas_dinner.txt  EN_prompt_E_critical_thinking.txt
prompt/pt/: PT_prompt_A_control_condition.txt  PT_prompt_B_motivational_learning.txt  PT_prompt_C_perspective.txt  PT_prompt_D_christmas_dinner.txt  PT_prompt_E_critical_thinking.txt
services/: conversation_service.py  prompt_service.py  trust_service.py
tasks/: global_message_blocked.md  quick_local_prod_switch.md  whisper_integration.md
